force-app/main/default/objects/ssot__CollectionPlanItem__dlm/fields/ssot__CollectionPlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CollectionPlanId__c</fullName>
    <label>Collection Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CollectionPlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>