force-app/main/default/objects/ssot__CollectionPlanItem__dlm/fields/ssot__CollectionPlanItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CollectionPlanItemStatus__c</fullName>
    <label>Collection Plan Item Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CollectionPlanItemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>