force-app/main/default/objects/ssot__CollectionPlanItem__dlm/fields/ssot__rel_1726825132366_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825132366_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CollectionPlanItem_CollectionPlanId__rel</label>
    <referenceTo>ssot__CollectionPlan__dlm</referenceTo>
    <relationshipLabel>CollectionPlanItem_CollectionPlanId__rel</relationshipLabel>
    <relationshipName>rel_1726825132366_end</relationshipName>
    <type>Lookup</type>
</CustomField>